--- a/src/sass/about.scss
+++ b/src/sass/about.scss
@@ -1,5 +1,11 @@
 .about {
-  margin: 60px 0;
+  display: flex;
+  align-content: center;
+
+  margin: $offset-4 0;
+  padding: $offset-1 0;
+
+  min-height: 400px;
 }
 
 .about__article {
@@ -11,5 +17,9 @@
   }
 }
 .about__video {
-  float: right;
+  width: 50%;
+  & > .content {
+    height: 91.5%;
+    background-color: $blue;
+  }
 }
