--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -17,13 +17,15 @@
     >
   </div>
   <div class="about__video">
-    <iframe
-      width="560"
-      height="315"
-      src="https://www.youtube.com/embed/A0FZIwabctw"
-      frameborder="0"
-      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen
-    ></iframe>
+    <div class="content">
+      <iframe
+        width="100%"
+        height="100%"
+        src="https://www.youtube.com/embed/A0FZIwabctw"
+        frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </div>
   </div>
 </section>
