мелкая правка в достижениях в цифрах

--- a/src/sass/numbers/numbers.scss
+++ b/src/sass/numbers/numbers.scss
@@ -18,7 +18,7 @@
 
   display: grid;
   grid-template: repeat(2, 1fr) / repeat(2, 1fr);
-  //justify-items: center;
+  align-items: center;
   grid-template-areas:
     'alignLeft  alignRight'
     'alignLeft  alignRight';
