--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -7,6 +7,7 @@
 @import 'services/services.scss';
 @import 'about.scss';
 @import './numbers/numbers.scss';
+@import './contact-us/contact-us.scss';
 
 body {
   font-family: Montserrat;
