--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -8,6 +8,7 @@
 @import 'about.scss';
 @import './numbers/numbers.scss';
 @import './contact-us/contact-us.scss';
+@import './news/news.scss';
 
 body {
   font-family: Montserrat;
