--- a/src/sass/about.scss
+++ b/src/sass/about.scss
@@ -13,7 +13,7 @@
   display: inline-block;
   h2 {
     color: $blue;
-    font-weight: $bold;
+    font-size: $font-size-5;
   }
 }
 .about__video {
