сверстан блок с международной школой

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -9,6 +9,7 @@
 @import './numbers/numbers.scss';
 @import './contact-us/contact-us.scss';
 @import './news/news.scss';
+@import './conferences/conferences.scss';
 
 body {
   font-family: Montserrat;
