Сверстали про рабочие группы

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -10,6 +10,7 @@
 @import './contact-us/contact-us.scss';
 @import './news/news.scss';
 @import './conferences/conferences.scss';
+@import './work-groups/work-groups.scss';
 
 body {
   font-family: Montserrat;
