сверстали форму подписки на рассылку

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -11,6 +11,7 @@
 @import './news/news.scss';
 @import './conferences/conferences.scss';
 @import './work-groups/work-groups.scss';
+@import './follow-us/follow-us.scss';
 
 body {
   font-family: Montserrat;
