--- a/src/sass/follow-us/follow-us.scss
+++ b/src/sass/follow-us/follow-us.scss
@@ -12,8 +12,10 @@
   max-width: 50%;
 
   h2 {
+    font-size: $font-size-5;
     line-height: 1;
     span {
+      font-size: $font-size-4;
       display: block;
       font-weight: $regular;
     }
