--- a/src/templates/follow-us/follow-us.html
+++ b/src/templates/follow-us/follow-us.html
@@ -10,7 +10,7 @@
     </p>
   </div>
   <div class="follow-us__inputs">
-    <input type="email" name="email" id="email" />
+    <input type="email" name="email" id="email" placeholder="Введите email" />
     <button>Подписаться</button>
   </div>
 </section>
