--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,3 +1,17 @@
 {% include './modals.html' %}
-<script defer src="/js/libs.min.js"></script>
-<script defer src="/js/app.js"></script>
+<footer>
+  <div class="contacts">
+    <div class="contacts__body">
+      <h3>Контакты</h3>
+      <p>
+        Картинка снова не доступна :(
+      </p>
+      <a href="tel:87476666666">87476666666</a
+      ><a href="tel:87476666666">87476666666</a>
+    </div>
+  </div>
+
+ 
+  <script defer src="/js/libs.min.js"></script>
+  <script defer src="/js/app.js"></script>
+</footer>
