--- a/src/templates/contact-us.html
+++ b/src/templates/contact-us.html
@@ -1,12 +1,14 @@
 <section class="contact-us">
-  <div class="contact-us__content">
-    <h3>Nostrud quis fugiat veniam nostrud culpa</h3>
-    <p>
-      Aliqua aliquip nulla qui laborum nostrud adipisicing dolor velit nisi ut
-      pariatur est.
-    </p>
+  <div class="contact-us__body">
+    <div class="contact-us__content">
+      <h3>Nostrud quis fugiat veniam nostrud culpa</h3>
+      <p>
+        Aliqua aliquip nulla qui laborum nostrud adipisicing dolor velit nisi ut
+        pariatur est.
+      </p>
+    </div>
+    <button>
+      Dolor enim
+    </button>
   </div>
-  <button>
-    Dolor enim
-  </button>
 </section>
