--- a/src/sass/contact-us/contact-us.scss
+++ b/src/sass/contact-us/contact-us.scss
@@ -1,17 +1,11 @@
 .contact-us {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-
-  background: contain cover no-repeat;
   background-image: url('../img/contact-us/contact-us__artboard.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 
-  width: 100vw;
   min-height: 200px;
-
   padding: 60px 50px;
-
-  transform: translateX(-50px);
 
   button {
     padding: 26px 30px;
@@ -22,6 +16,14 @@
     border-radius: 50px;
     letter-spacing: 3px;
   }
+}
+
+.contact-us__body {
+  max-width: 1080px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: auto;
 }
 
 .contact-us__content {
