--- a/src/sass/numbers/numbers.scss
+++ b/src/sass/numbers/numbers.scss
@@ -1,7 +1,13 @@
 @import './numbers-item.scss';
 
+.numbers{
+  background: center center no-repeat;
+  background-image: url(../img/numbers/numbers__circle.png);
+  background-color: $blue;
+}
+
 .numbers__background {
-  width: 100vw;
+  max-width: 1080px;
   min-height: 480px;
 
   padding: 0 80px;
@@ -9,12 +15,8 @@
 
   color: white;
 
-  // 50px === padding for global wrapper
-  transform: translateX(-50px);
-
-  background: center center no-repeat;
-  background-image: url(../img/numbers/numbers__circle.png);
-  background-color: $blue;
+ 
+  
 
   display: grid;
   grid-template: repeat(2, 1fr) / repeat(2, 1fr);
